--- a/src/style.scss
+++ b/src/style.scss
@@ -20,3 +20,42 @@ body{
         font-size: 20px;
     }
 }
+
+/** Posts **/
+.postBox{
+    width: 700px;
+    padding: 30px;
+    border: 1px solid #ccc;
+    background-color: #fff;
+    margin: 30px auto;
+    margin-bottom: 30px;
+
+    .avatar{
+        float: left;
+        padding-right: 10px;
+    }
+
+    .name{
+        h2{
+            font-size: 16px;
+            color: #666;
+            padding-top: 15px;
+        }
+    }
+
+    .date{
+        font-size: 14px;
+        color: #999;
+        margin-bottom: 25px;
+    }
+
+    hr{
+        border: 1px solid #EEE;
+    }
+
+    .text{
+        font-size: 16px;
+        color: #333;
+        margin-top: 25px;
+    }
+}
