--- a/src/style.scss
+++ b/src/style.scss
@@ -6,13 +6,14 @@
 
 body{
     background-color: #E9EBEE;
+}
 
-    header{
-        background-color: #4267B2;
-        border-bottom: 1px solid #29487D;
-        height: 60px;
-    }
-
+/** Header **/
+header{
+    background-color: #4267B2;
+    border-bottom: 1px solid #29487D;
+    height: 60px;
+    
     h1{
         color: #fff;
         text-align: center;
@@ -20,6 +21,7 @@ body{
         font-size: 20px;
     }
 }
+
 
 /** Posts **/
 .postBox{
